# strategy_pattern

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
aLib/: CMakeLists.txt  Context.cpp  Context.h  Strategy.cpp  Strategy.h  StrategyOne.cpp  StrategyOne.h
aTest/: CMakeLists.txt  aArithmeticMeanTest.cpp  aContextTest.cpp  aTest01.cpp
theApp/: theApp.cpp
